--- a/app_pcdn_block.conf
+++ b/app_pcdn_block.conf
@@ -1,6 +1,5 @@
-# from https://github.com/privacy-protection-tools/anti-AD/blob/master/discretion/pcdn.txt
 #禁止pcdn域名
-# PCDN domains
+# from https://github.com/privacy-protection-tools/anti-AD/blob/master/discretion/pcdn.txt
 ||bsccdn.net^
 ||dyp2p-ali.douyucdn.cn^
 ||dyp2p-hw.douyucdn.cn^
@@ -29,3 +28,22 @@
 ||szbdyd.com^
 ||uhabo.com^
 ||xycdn.com^
+
+#from https://thhbdd.github.io/Block-pcdn-domains/ban.txt
+||gjfzpt.cn^
+||szbdyd.com^
+||bsccdn.net^
+||pkoplink.com^
+||saxysec.com^
+||uhabo.com^
+||xycdn.com^
+||kuiniuca.com^
+||onethingpcs.com^
+||jomodns.cn^
+||p2p.huya.com^
+||stun.douyucdn.cn
+||stun.hitv.com
+||stun1.douyucdn.cn
+||mcdn.bilivideo.cn^
+||tpa-hcdn.iqiyi.com^
+||pcdn.xmcdn.com^
