--- a/app_pcdn_block.conf
+++ b/app_pcdn_block.conf
@@ -47,3 +47,10 @@
 ||mcdn.bilivideo.cn^
 ||tpa-hcdn.iqiyi.com^
 ||pcdn.xmcdn.com^
+/.*pcdn.*biliapi\.net/
+/.*pcdn.*youku\.com/
+/.*p2p.*douyucdn\.cn/
+/.*p2p.*qq\.com/
+/.*pcdn.*biliapi.net/
+/.*pcdn.*youku.com/
+||pcdn.yximgs.com
