--- a/app_dns_block.conf
+++ b/app_dns_block.conf
@@ -47,3 +47,52 @@
 ||httpsdns.baidu.com^
 ||lofter.httpdns.c.163.com^
 ||music.httpdns.c.163.com^
+
+#from https://github.com/VirgilClyne/GetSomeFries/blob/main/stoverride/HTTPDNS.Block.stoverride
+# Alibaba
+  ||httpdns.alicdn.com^
+
+  # Aliyun
+  ||httpdns-api.aliyuncs.com^
+  ||httpdns-sc.aliyuncs.com^
+
+  # Baidu
+  ||httpsdns.baidu.com^
+  ||httpdns.baidu.com^
+
+  # BaiduBCE
+  ||httpdns.baidubce.com^
+
+  # Bilibili
+  ||httpdns.bilivideo.com^
+ 
+  # Huawei
+  ||httpdns.c.cdnhwc2.com^
+
+  # JD
+  ||dns.jd.com^
+
+  # Kuaishou
+  ||kuaishou.httpdns.pro^
+  
+  # Meituan
+  ||httpdns.meituan.com^
+
+  # NetEase
+  ||httpdns.yunxindns.com^
+  ||httpdns.n.netease.com^
+  ||music.httpdns.c.163.com^
+  ||lofter.httpdns.c.163.com^
+
+  # Oppo
+  ||httpdns.push.oppomobile.com^
+
+  # Volcengine
+  ||httpdns.volcengineapi.com^
+
+  # Weibo
+  ||dns.weibo.cn^
+
+  # Weixin
+  ||dns.weixin.qq.com^
+  ||dns.weixin.qq.com.cn^
